Changed incorrect high contrast colour, Fixed bug with high contrast theme affecting buttons

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
     }
 
     .theme-high-contrast {
-        --color-incorrect: #919090;
+        --color-incorrect: #424242;
         --color-higher: #56B4E9;
         --color-lower: #CC79A7;
         --color-half: #E69F00;
